--- a/source/nginx.conf
+++ b/source/nginx.conf
@@ -9,14 +9,25 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+    # Auto index if index.html doesn't exist (helps avoid 403 errors)
+    autoindex on;
+
     location / {
         try_files $uri $uri/ /index.html;
+        # Avoid permission issues
+        auth_basic off;
     }
 
     # Cache static assets
     location /assets/ {
         expires 1y;
         add_header Cache-Control "public, no-transform";
+    }
+
+    # Explicitly allow access to images
+    location /images/ {
+        try_files $uri $uri/ =404;
+        auth_basic off;
     }
 
     # Security headers
