--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./source/dist:/usr/share/nginx/html:ro
+    user: nginx
     networks:
       - homni-network
 
