--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,7 @@ services:
     ports:
       - "8088:80"
     restart: unless-stopped
-    volumes:
-      # For development, mount the dist directory - comment out for production
-      # - ./source/dist:/usr/share/nginx/html:ro
+    volumes: []
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/index.html"]
       interval: 30s
