--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   homni:
     build:
-      context: ./source
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: source/Dockerfile
     container_name: homni-dashboard
     ports:
       - "8088:80"
