--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   homni:
     build:
       context: .
-      dockerfile: source/Dockerfile
+      dockerfile: Dockerfile
     container_name: homni-dashboard
     ports:
       - "8088:80"
