--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -2,23 +2,14 @@ version: '3.8'
 
 services:
   homni:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: homni-dashboard
     ports:
       - "8088:80"
     restart: unless-stopped
-    volumes: []
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/index.html"]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 10s
-    networks:
-      - homni-network
-
-networks:
-  homni-network:
-    driver: bridge 
