--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node ./disable-dev.js",
-    "build": "tsc -b && vite build",
+    "build": "vite build --outDir=./web",
     "lint": "eslint .",
     "preview": "vite preview"
   },
